--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,7 @@
     background: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url('../assets/images/group-1.png');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     border-radius: 15px; 
     display: flex;
     justify-content: center;
